--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
-.DS_Store
-.dart_tool/
+# See https://www.dartlang.org/guides/libraries/private-files
 
+# Files and directories created by pub
+.dart_tool/
 .packages
 .pub/
-
 build/
-ios/.generated/
-ios/Flutter/Generated.xcconfig
-ios/Runner/GeneratedPluginRegistrant.*
+# If you're building an application, you may want to check-in your pubspec.lock
+pubspec.lock
+
+# Directory created by dartdoc
+# If you don't generate documentation locally you can remove this line.
+doc/api/
+.idea
+*.iml
